--- a/Yingying/supporting files/Base.lproj/Main.storyboard
+++ b/Yingying/supporting files/Base.lproj/Main.storyboard
@@ -218,7 +218,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="141" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="95Y-qT-yrc">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="139" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="95Y-qT-yrc">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="406"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -229,27 +229,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="140.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muF-tM-BO5">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="muF-tM-BO5">
                                                     <rect key="frame" x="10" y="10" width="30" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIu-RL-MOn">
-                                                    <rect key="frame" x="9" y="38" width="30" height="18"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="文字 文字 文字 文字 文字 文字 文字 " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIu-RL-MOn">
+                                                    <rect key="frame" x="9" y="38" width="102" height="34.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="second" translatesAutoresizingMaskIntoConstraints="NO" id="hZr-RD-iMT">
-                                                    <rect key="frame" x="10" y="66" width="50" height="50"/>
+                                                    <rect key="frame" x="10" y="82.5" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="2HY-QS-1X3"/>
                                                         <constraint firstAttribute="height" constant="50" id="ocS-SE-8c2"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="second" translatesAutoresizingMaskIntoConstraints="NO" id="j3g-3o-IdK">
-                                                    <rect key="frame" x="85" y="66" width="50" height="50"/>
+                                                    <rect key="frame" x="85" y="82.5" width="50" height="50"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -257,12 +257,14 @@
                                                 <constraint firstItem="hZr-RD-iMT" firstAttribute="top" secondItem="PIu-RL-MOn" secondAttribute="bottom" constant="10" id="J1T-YR-3lc"/>
                                                 <constraint firstItem="muF-tM-BO5" firstAttribute="leading" secondItem="abd-un-QCp" secondAttribute="leading" constant="10" id="K2M-Ug-J5q"/>
                                                 <constraint firstItem="j3g-3o-IdK" firstAttribute="height" secondItem="hZr-RD-iMT" secondAttribute="height" id="KT6-93-e6k"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="PIu-RL-MOn" secondAttribute="trailing" constant="200" id="N4o-RB-zn1"/>
                                                 <constraint firstItem="j3g-3o-IdK" firstAttribute="width" secondItem="hZr-RD-iMT" secondAttribute="width" id="PdV-NS-wsE"/>
                                                 <constraint firstItem="j3g-3o-IdK" firstAttribute="leading" secondItem="hZr-RD-iMT" secondAttribute="trailing" constant="25" id="WLW-7a-nbF"/>
                                                 <constraint firstItem="PIu-RL-MOn" firstAttribute="top" secondItem="muF-tM-BO5" secondAttribute="bottom" constant="10" id="hqZ-Kz-e4M"/>
                                                 <constraint firstItem="hZr-RD-iMT" firstAttribute="leading" secondItem="abd-un-QCp" secondAttribute="leading" constant="10" id="phj-ll-Fov"/>
                                                 <constraint firstItem="muF-tM-BO5" firstAttribute="top" secondItem="abd-un-QCp" secondAttribute="top" constant="10" id="w0s-bL-NQT"/>
                                                 <constraint firstItem="j3g-3o-IdK" firstAttribute="centerY" secondItem="hZr-RD-iMT" secondAttribute="centerY" id="xCc-4L-gcD"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="hZr-RD-iMT" secondAttribute="bottom" id="ze0-I3-6q2"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -411,55 +413,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="f2g-ql-jB4">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="我 是 具体的心情" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="f2g-ql-jB4">
                                 <rect key="frame" x="0.0" y="64" width="320" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="PIC-SJ-7dn"/>
                                 </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="second" translatesAutoresizingMaskIntoConstraints="NO" id="ASC-j6-BXf">
-                                <rect key="frame" x="6" y="202" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="UbD-bX-mOH"/>
-                                    <constraint firstAttribute="width" constant="50" id="ZVj-Nv-TQq"/>
-                                </constraints>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IBa-uc-6XM">
-                                <rect key="frame" x="10" y="262" width="300" height="1"/>
+                                <rect key="frame" x="10" y="312" width="300" height="1"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="BZJ-jU-xEp"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="广州大学城" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lr8-n0-Naf">
-                                <rect key="frame" x="10" y="273" width="75" height="18"/>
+                                <rect key="frame" x="10" y="323" width="75" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F39-gz-Aou">
-                                <rect key="frame" x="85" y="212" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yKW-ET-YFR">
+                                <rect key="frame" x="10" y="202" width="300" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" identifier="height" id="L44-v1-ZLJ"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="otq-Uu-oKd">
+                                    <size key="itemSize" width="73" height="70"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="lmS-xd-aAG">
+                                        <rect key="frame" x="0.0" y="0.0" width="73" height="70"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="73" height="70"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="10" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="first" translatesAutoresizingMaskIntoConstraints="NO" id="3HM-9p-3Ws">
+                                                    <rect key="frame" x="0.0" y="0.0" width="73" height="70"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="3HM-9p-3Ws" firstAttribute="leading" secondItem="lmS-xd-aAG" secondAttribute="leading" id="6Dk-Od-gEj"/>
+                                            <constraint firstAttribute="trailing" secondItem="3HM-9p-3Ws" secondAttribute="trailing" id="UsC-1G-bsT"/>
+                                            <constraint firstAttribute="bottom" secondItem="3HM-9p-3Ws" secondAttribute="bottom" id="aOf-OF-9hS"/>
+                                            <constraint firstItem="3HM-9p-3Ws" firstAttribute="top" secondItem="lmS-xd-aAG" secondAttribute="top" id="cPo-le-ovc"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
                                 <connections>
-                                    <action selector="onAdd:" destination="Vxo-Yb-ex5" eventType="touchUpInside" id="R32-3p-9ez"/>
+                                    <outlet property="dataSource" destination="Vxo-Yb-ex5" id="z6e-rt-rQR"/>
+                                    <outlet property="delegate" destination="Vxo-Yb-ex5" id="dal-JQ-Iic"/>
                                 </connections>
-                            </button>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="lr8-n0-Naf" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" constant="10" id="0l7-hd-DRv"/>
                             <constraint firstItem="f2g-ql-jB4" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" id="0n0-Au-dVt"/>
+                            <constraint firstItem="yKW-ET-YFR" firstAttribute="top" secondItem="f2g-ql-jB4" secondAttribute="bottom" constant="10" id="7ra-v7-YMz"/>
                             <constraint firstItem="lr8-n0-Naf" firstAttribute="top" secondItem="IBa-uc-6XM" secondAttribute="bottom" constant="10" id="CQU-9K-dPn"/>
                             <constraint firstItem="f2g-ql-jB4" firstAttribute="top" secondItem="tmE-J7-I7r" secondAttribute="bottom" id="DO2-Vs-qrM"/>
-                            <constraint firstItem="IBa-uc-6XM" firstAttribute="top" secondItem="ASC-j6-BXf" secondAttribute="bottom" constant="10" id="Eg8-9L-yMx"/>
                             <constraint firstAttribute="trailing" secondItem="f2g-ql-jB4" secondAttribute="trailing" id="KgJ-JE-Yrj"/>
                             <constraint firstItem="IBa-uc-6XM" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" constant="10" id="Mid-kH-MEX"/>
                             <constraint firstAttribute="trailing" secondItem="IBa-uc-6XM" secondAttribute="trailing" constant="10" id="YRT-tA-QBf"/>
-                            <constraint firstItem="ASC-j6-BXf" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leadingMargin" constant="-10" id="bzX-xK-ixo"/>
-                            <constraint firstItem="ASC-j6-BXf" firstAttribute="top" secondItem="f2g-ql-jB4" secondAttribute="bottom" constant="10" id="vnE-NP-ml8"/>
+                            <constraint firstItem="IBa-uc-6XM" firstAttribute="top" secondItem="yKW-ET-YFR" secondAttribute="bottom" constant="10" id="eB4-gv-F9s"/>
+                            <constraint firstAttribute="trailing" secondItem="yKW-ET-YFR" secondAttribute="trailing" constant="10" id="mcL-6q-fJA"/>
+                            <constraint firstItem="yKW-ET-YFR" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" constant="10" id="ozB-mx-e2M"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="发布心情" id="fLt-s0-7tv">
@@ -470,7 +497,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="myImageView" destination="ASC-j6-BXf" id="fX9-oF-DIk"/>
+                        <outlet property="myImages" destination="yKW-ET-YFR" id="gGB-wC-v4e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GWZ-ch-1pM" userLabel="First Responder" sceneMemberID="firstResponder"/>
