--- a/Yingying/supporting files/Base.lproj/Main.storyboard
+++ b/Yingying/supporting files/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -581,6 +581,58 @@
             </objects>
             <point key="canvasLocation" x="246" y="-1734"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FR1-Fy-62g">
+            <objects>
+                <navigationController storyboardIdentifier="personal_home_page_controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="DdN-Re-LdW" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="84i-zL-DeE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="rA6-fm-ERW" kind="relationship" relationship="rootViewController" id="NyN-4Q-qIK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vfI-8B-VJZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="239" y="-2365"/>
+        </scene>
+        <!--个人主页-->
+        <scene sceneID="ftc-yy-eKJ">
+            <objects>
+                <tableViewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="rA6-fm-ERW" customClass="PersonalHomePageController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="111" sectionHeaderHeight="28" sectionFooterHeight="28" id="dRV-vc-jQq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="111" id="ywy-f2-H6X">
+                                <rect key="frame" x="0.0" y="92" width="320" height="111"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ywy-f2-H6X" id="6Tc-ug-Dey">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="110.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="rA6-fm-ERW" id="ben-uo-1xR"/>
+                            <outlet property="delegate" destination="rA6-fm-ERW" id="SNZ-Yx-UkD"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="个人主页" id="AUC-Ul-7FN">
+                        <barButtonItem key="leftBarButtonItem" title="返回" id="VE0-8M-vs0">
+                            <connections>
+                                <action selector="onCancel:" destination="rA6-fm-ERW" id="tlk-rt-82N"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K4M-OT-g4i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="668" y="-2377"/>
+        </scene>
         <!--发布心情-->
         <scene sceneID="XMb-gg-D67">
             <objects>
@@ -713,17 +765,26 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="b3Q-vF-0Zm" firstAttribute="centerX" secondItem="l4I-M8-p2V" secondAttribute="centerX" constant="28" id="0EV-C9-2t3"/>
                             <constraint firstItem="ktq-ra-jQH" firstAttribute="centerX" secondItem="l4I-M8-p2V" secondAttribute="centerX" constant="-49" id="GPX-bH-KPk"/>
                             <constraint firstItem="ktq-ra-jQH" firstAttribute="centerY" secondItem="l4I-M8-p2V" secondAttribute="centerY" id="Xp2-HS-Z4a"/>
                             <constraint firstItem="b3Q-vF-0Zm" firstAttribute="centerY" secondItem="l4I-M8-p2V" secondAttribute="centerY" id="lFJ-lD-FE9"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="1wU-OK-Gmu" appends="YES" id="OPJ-3f-iLB"/>
+                        </connections>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MfW-5n-RfP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="1wU-OK-Gmu">
+                    <connections>
+                        <action selector="onDismiss:" destination="PZy-ie-4hb" id="t0w-dd-tWV"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1094" y="-1612"/>
+            <point key="canvasLocation" x="1094" y="-1772"/>
         </scene>
         <!--详情-->
         <scene sceneID="57e-SB-LNN">
