--- a/Yingying/vc/around/map/CustomMapView.xib
+++ b/Yingying/vc/around/map/CustomMapView.xib
@@ -1,33 +1,41 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LYAnnotationView"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleToFill" id="dhd-QF-gFU">
+            <rect key="frame" x="0.0" y="0.0" width="40" height="80"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wvf-GU-V75">
-                    <rect key="frame" x="196" y="232" width="50" height="100"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="second" translatesAutoresizingMaskIntoConstraints="NO" id="TeL-zB-pwB">
-                            <rect key="frame" x="3" y="4" width="45" height="42"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="first" translatesAutoresizingMaskIntoConstraints="NO" id="9Fv-ZC-rtv">
-                            <rect key="frame" x="3" y="56" width="45" height="42"/>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map_avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="TgT-QN-Th8">
+                    <rect key="frame" x="0.0" y="0.0" width="40" height="50"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map_man_location.png" translatesAutoresizingMaskIntoConstraints="NO" id="bD8-8c-bwT">
+                    <rect key="frame" x="10" y="50" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="NJd-bN-vmn"/>
+                    </constraints>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="bD8-8c-bwT" firstAttribute="leading" secondItem="dhd-QF-gFU" secondAttribute="leading" constant="10" id="09i-eZ-P10"/>
+                <constraint firstItem="TgT-QN-Th8" firstAttribute="leading" secondItem="dhd-QF-gFU" secondAttribute="leading" id="C5d-db-Koc"/>
+                <constraint firstItem="TgT-QN-Th8" firstAttribute="top" secondItem="dhd-QF-gFU" secondAttribute="top" id="Pzz-a9-T4G"/>
+                <constraint firstAttribute="bottom" secondItem="bD8-8c-bwT" secondAttribute="bottom" id="agL-WT-Q3g"/>
+                <constraint firstAttribute="trailing" secondItem="bD8-8c-bwT" secondAttribute="trailing" id="fBB-OB-ZRm"/>
+                <constraint firstAttribute="trailing" secondItem="TgT-QN-Th8" secondAttribute="trailing" id="juK-ds-8hk"/>
+                <constraint firstItem="bD8-8c-bwT" firstAttribute="top" secondItem="TgT-QN-Th8" secondAttribute="bottom" id="tqE-3Z-AMO"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="170" y="-860"/>
         </view>
     </objects>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="map_avatar.png" width="54" height="54"/>
+        <image name="map_man_location.png" width="74" height="72"/>
     </resources>
 </document>
